@@ -1758,7 +1758,7 @@ static void obey_request_thread(void *arg)
 
 	} else {
 	    trans = urltrans_find(translations, msg->sms.msgdata,
-	    	    	      msg->sms.smsc_id, msg->sms.sender, msg->sms.receiver);
+	    	    	      msg->sms.smsc_id, msg->sms.sender, msg->sms.receiver, msg->sms.account);
 	    if (trans == NULL) {
 		warning(0, "No translation found for <%s> from <%s> to <%s>",
 		    octstr_get_cstr(msg->sms.msgdata),
